5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1602_1446.log
== TEST (2019-03-20 19:25:43) 
-- CODE:
int(input("Litros de poupas de fruta: "))

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:25:49) 
-- CODE:
int(input("Litros de poupas de fruta: "))

-- EXECUTION TIME:
0.172831
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:

-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:

-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:55) 
-- CODE:
int(input("Litros de poupas de fruta: "))

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:28:29) 
-- CODE:
var(input("Litros de poupas de fruta: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var(input())
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:28:40) 
-- CODE:
float(input("Litros de poupas de fruta: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var(input())
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:22) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))
print(var/3)
-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:31:52) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))
print(2/3*var)
-- OUTPUT:
4.666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:33:02) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(2/3*var-var)
-- OUTPUT:
-2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:19) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(2/3*var-var)
-- EXECUTION TIME:
0.122734
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
-2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
-6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
-5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:33:45) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(2/3*var-var)
-- OUTPUT:
-2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:34:08) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print((2/3*var)-var)
-- OUTPUT:
-2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:35:37) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(2/3*var)
-- OUTPUT:
4.666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:36:12) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(1/3*var)
-- OUTPUT:
2.333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:36:19) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(1/3*var)
-- EXECUTION TIME:
0.13265
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333333333333333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666666
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:36:55) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(round(1/3*var,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:37:00) 
-- CODE:
var=float(input("Litros de poupas de fruta: "))

print(round(1/3*var,3))
-- EXECUTION TIME:
0.124296
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
